--- a/view/commons/header.html
+++ b/view/commons/header.html
@@ -274,14 +274,14 @@
                     <input id="headerSearch" type="search" placeholder="기본값">
                     
                     <!-- 돋보기 -->
-                    <i class="fa fa-search" id="search-icon" style="cursor: pointer; font-size: 27px;margin: 9px;border-radius: -26px;border-bottom-width: 2px;border-bottom-style: none;margin-left: 8px;"></i>
+                    <i class="fa fa-search" id="search-icon" style="cursor: pointer; font-size: 27px;margin: 9px 40px 9px 8px;border-radius: -26px;border-bottom-width: 2px;border-bottom-style: none;"></i>
                     
                     <!-- 장바구니 -->
-                    <svg id="goCart" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none"
+                    <!-- <svg id="goCart" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none"
                     style="font-size: 35px; margin: 0 10px; cursor: pointer;">
                     <path d="M16 11V7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7V11M5 9H19L20 21H4L5 9Z"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    </path></svg>
+                    </path></svg> -->
 
                     <!-- 로그인버튼 -->
                     <button id="goLogin" class="btn btn-primary" type="button"><strong>로그인/가입</strong></button>
