admin story add

--- a/view/commons/header.html
+++ b/view/commons/header.html
@@ -143,7 +143,8 @@
         position: absolute;
         padding: 0 15px;
         overflow: hidden;
-        top: 100%; right: 10px;
+        top: 99%; right: 10px;
+        z-index: 99;
         width: 210px;
         height: 0;
         opacity: 0;
