--- a/view/commons/menuStore.html
+++ b/view/commons/menuStore.html
@@ -115,9 +115,9 @@
             <div class="collapse navbar-collapse" id="navcol-2" style="font-size: 13px;font-family: 'Noto Sans KR', sans-serif;">
                 <ul class="navbar-nav" style="font-family: 'Noto Sans KR', sans-serif;font-size: 20px;color: rgb(0,0,0); margin-left: 20px;">
                     <li class="nav-item"><a class="nav-link nav_a" href="../../index.html">홈</a></li>
-                    <li class="nav-item"><a class="nav-link nav_a" href="#today_hot">인기상품</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a" href="../store/mainStore.html?#today_hot">인기상품</a></li>
                     
-                    <li class="nav-item"><a class="nav-link nav_a down_list" href="#">가구</a>
+                    <li class="nav-item"><a class="nav-link nav_a down_list" href="../store/mainStore.html?category=가구">가구</a>
                         <div class="submenu_wrap d-md-block d-none">
                         <div class="submenu_box">
                             <figure class="figure">
@@ -137,10 +137,10 @@
                         </div>
                     </li>
 
-                    <li class="nav-item"><a class="nav-link nav_a down_list" href="#">조명</a></li>
-                    <li class="nav-item"><a class="nav-link nav_a down_list" href="#">홈데코</a></li>
-                    <li class="nav-item"><a class="nav-link nav_a down_list" href="#">패브릭</a></li>
-                    <li class="nav-item"><a class="nav-link nav_a down_list" href="#">수납정리</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a down_list" href="../store/mainStore.html?category=조명">조명</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a down_list" href="../store/mainStore.html?category=홈데코">홈데코</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a down_list" href="../store/mainStore.html?category=패브릭">패브릭</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a down_list" href="../store/mainStore.html?category=수납정리">수납정리</a></li>
                 </ul>
                 
                 <!-- 메뉴 호버 -->
