--- a/view/community/mainCommunity.html
+++ b/view/community/mainCommunity.html
@@ -241,7 +241,7 @@
                             +  '<span></span>'
                             +  '<img src="http://localhost:3000/upload/' + val.productFileName + '" alt="">'
                             +  '</div>'
-                            +  '<div style="padding:0 50px; margin:10px 0 -5px 0;"><h3 style="font-family: \'Noto Sans KR\'; font-size: 17px;">' + val.productName + '</h3></div>';
+                            +  '<div class="row" style="margin:0px 40px; margin-top: 15px;margin-bottom: 10px;"><h3 style="font-family: \'Noto Sans KR\'; font-size: 17px; height: 32px;float: none; margin:0 auto;">' + val.productName + '</h3></div><div class="row">';
 
                         if(val.productDiscount != 0) {
                             app += '<span style="font-family: \'Noto Sans KR\';font-size: 15px; color:gray;"><del>'+makeComma(val.productPrice)+'원</del>&nbsp;&nbsp;</span><span style="font-family: \'Noto Sans KR\';font-size: 17px;"><b>' + makeComma(val.productDiscount) + ' 원</b>&nbsp;&nbsp;</span>'
